fix: docs authentication
